# AetherVC

./: .gitignore  Cargo.toml  README.md  q
.github/workflows/: ci.yml
aether-api/: Cargo.toml
aether-api/src/: main.rs
aether-cli/: Cargo.toml
aether-cli/src/: main.rs
aether-core/: Cargo.toml
aether-core/src/: lib.rs
aether-core/src/agents/: base.rs  coordinator.rs  merge.rs  mod.rs  orchestrator.rs  recovery.rs  rollback.rs  semantic_interpreter.rs  validation.rs
aether-core/src/batch/: mod.rs
aether-core/src/config/: loader.rs  mod.rs  types.rs
aether-core/src/digest/: aggregator.rs  mod.rs  summarizer.rs
aether-core/src/domain/: agent.rs  commit.rs  merge.rs  mod.rs  recovery.rs  semantic.rs  tag.rs
aether-core/src/llm/: client.rs  factory.rs  mod.rs  prompts.rs
aether-core/src/llm/client/: mod.rs  retry.rs
aether-core/src/llm/providers/: deepseek.rs  mod.rs  openai.rs
aether-core/src/nlp/: context.rs  executor.rs  mod.rs  parser.rs
aether-core/src/review/: gate.rs  mod.rs  queue.rs
aether-core/src/semantic/: analyzer.rs  embedder.rs  indexer.rs  knowledge_graph.rs  mod.rs  search.rs
aether-core/src/semantic/embedder/: factory.rs  mod.rs  openai.rs  retry.rs
aether-core/src/storage/: git.rs  graph_db.rs  mod.rs  vector_db.rs
aether-core/src/utils/: error.rs  mod.rs
aether-core/src/verify/: mod.rs  runner.rs
aether-core/src/workflow/: mod.rs
aether-core/tests/: real_llm_tests.rs  workflows.rs
aether-web/: Cargo.toml
aether-web/src/: main.rs
aetherci/: Cargo.toml
aetherci/src/: lib.rs
aetherci/src/domain/: mod.rs
aetherci/src/pipeline/: classifier.rs  impact.rs  intent.rs  mod.rs  orchestrator.rs  preprocessor.rs  report.rs
docs/: ARCHITECTURE.md  PRD-v0.2.md  PRD-v0.3.md  PRD-v0.4.md  prd-v0.1.md
scripts/: analyze_git.sh  test_all.sh  test_persistent_storage.sh
