[package]
name = "aether-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
aether-core = { path = "../aether-core" }
aetherci = { path = "../aetherci" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
